--- a/.github/workflows/pud.yml
+++ b/.github/workflows/pud.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: wangch64/mytest2
+        repository: setoutlas/mytest3
         dockerfile: Dockerfile
         always_pull: true
         tags: latest
